BUG-27066: Replicate changes made to original hiveserver2.cmd to be in sync when Ranger is enabled